# dataspace-sdk

./: DEVELOPMENT.md  LICENSE  README.md  client_config.py  pyproject.toml  requirements.txt  sample_client.py  sample_datasources.py
.github/workflows/: development.yml  python-package.yml
configs/: config-dataspace-prod.yml
src/sfisop/dataspace_sdk/: client.py  config.py  main.py  sample_client.py
tests/: test_dataspace_sdk.py
