[tool.poetry]
name = "sfisop-dataspace-sdk"
version = "0.1.1"
description = ""
authors = ["Yo581515 <581515@stud.hvl.no>"]
readme = "README.md"
packages = [{include = "sfisop", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
idna = "3.7"
python-decouple = "3.8"
pyyaml = "6.0.1"
requests = "2.32.0"
urllib3 = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
